# cs6120

./: .gitignore  .gitmodules  Cargo.toml  README.md
lesson12/: Cargo.toml  dummy.bril  dummy_trace_spec.txt  lesson12.txt
lesson12/src/: main.rs  trace.rs
lesson2/: Cargo.toml  cordic.ts  turnt.toml
lesson2/src/: lib.rs  main.rs  stat.rs
lesson2/tests/: ackermann.out  armstrong.out  binary-fmt.out  birthday.out  bitshift.out  bitwise-ops.out  catalan.out  check-primes.out  collatz.out  digital-root.out  euclid.out  fact.out  factors.out  fitsinside.out  fizz-buzz.out  gcd.out  hanoi.out  is-decreasing.out  lcm.out  loopfact.out  mod_inv.out  orders.out  palindrome.out  pascals-row.out  perfect.out  primes-between.out  pythagorean_triple.out  quadratic.out  recfact.out  rectangles-area-difference.out  relative-primes.out  reverse.out  sum-bits.out  sum-check.out  sum-divisors.out  sum-sq-diff.out  totient.out  up-arrow.out
lesson3/: Cargo.toml  brench.toml  cordic_lvn.bril  gradient_lvn.bril
lesson3/src/: dce.rs  lvn.rs  main.rs
lesson3/test/: lvn1.bril  lvn2.bril  silly.bril  silly3.bril
lesson4/: Cargo.toml  run.sh  turnt.toml
lesson4/src/: framework.rs  lib.rs  main.rs  reaching_defs.rs
lesson4/test/: ackermann.lv  ackermann.rd  armstrong.lv  armstrong.rd  binary-fmt.lv  binary-fmt.rd  birthday.bril  birthday.lv  birthday.rd  bitshift.lv  bitshift.rd  bitwise-ops.lv  bitwise-ops.rd  catalan.lv  catalan.rd  check-primes.lv  check-primes.rd  collatz.lv  collatz.rd  euclid.lv  (+69 more)
lesson5/: Cargo.toml  turnt.toml
lesson6/: Cargo.toml
lesson7/: build.sh  compile.sh  data.csv  lesson7.txt  run.sh  run_all.py
lesson8/: CMakeLists.txt  build.sh  compile.sh  compile2.sh  emit-llvm.sh  run.py
utils/: Cargo.toml
(+17 files in other folders)
