[package]
name = "lesson3"
version = "0.1.0"
edition = "2021"

[dependencies]
lesson2 = { path = "../lesson2" }
argh.workspace = true
serde_json.workspace = true
bril-rs.workspace = true
itertools.workspace = true
graphviz-rust.workspace = true
linked-hash-map.workspace = true
rust_decimal = "1.36.0"
bigdecimal = "0.4.7"
ordered-float = "4.6.0"
